...
      modifier = Modifier.testTag("AlertDialog"),
      title = { Text(text = dialogTitle) },
      text = { Text(text = dialogText, fontSize = 16.sp) },
      onDismissRequest = { onDismissRequest() },
      confirmButton = {
        TextButton(
            onClick = { onConfirmation() }, modifier = Modifier.testTag("AlertDialogConfirm")) {
              Text("Confirm", fontSize = 16.sp)
            }
      },
      dismissButton = {
        TextButton(
            onClick = { onDismissRequest() }, modifier = Modifier.testTag("AlertDialogDismiss")) {
              Text("Dismiss", fontSize = 16.sp)
...
