...
            horizontalArrangement = Arrangement.SpaceBetween) {
              SmallTitle(title = title, padding = padding, color = Color.Black)
              Button(
                  modifier =
                      Modifier.padding(horizontal = 8.dp)
                          .heightIn(max = 35.dp)
                          .testTag("TimePickerButton"),
                  onClick = { showTimePicker = true },
                  colors = ButtonDefaults.buttonColors(containerColor = buttonColor),
                  shape = RoundedCornerShape(10.dp)) {
                    Text(text = time?.let { dateToHourMinuteString(it) } ?: "Select Time")
                  }
            }
...
